Prevent subscribe button from appearing cut off
Fixes DD 71427 382

--- a/app/design/frontend/Travers/default/Magento_Newsletter/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_Newsletter/styles/module/_common.scss
@@ -31,9 +31,12 @@
         width: 1%;
 
         .subscribe {
-            box-shadow: inset 0 -2px $c-sapphire, inset -1px 0px 0px 2px $c-waterfall;
-            border-radius: 0 6px 6px 0;
             min-height: 49px;
+
+            @include min-screen($screen__l) {
+                box-shadow: inset 0 -2px $c-sapphire, inset -1px 0px 0px 2px $c-waterfall;
+                border-radius: 0 6px 6px 0;
+            }
         }
     }
 }
